add himalayan.html and iceland.html

--- a/project0/himalayan.html
+++ b/project0/himalayan.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col-lg-6">
                 <h4>Geology</h4>
-                <p>The Himalayan range is one of the youngest mountain ranges on the planet and consists mostly of
+                <p class="lead">The Himalayan range is one of the youngest mountain ranges on the planet and consists mostly of
                     uplifted sedimentary and metamorphic rock. According to the modern theory of plate tectonics, its
                     formation is a result of a continental collision or orogeny along the convergent boundary between
                     the Indo-Australian Plate and the Eurasian Plate. The Arakan Yoma highlands in Myanmar and the
@@ -45,13 +45,13 @@
                 </p>
                 <br>
                 <h4>Hydrology</h4>
-                <p>Despite their scale, the Himalayas do not form a major watershed, and a number of rivers cut through
+                <p class="lead">Despite their scale, the Himalayas do not form a major watershed, and a number of rivers cut through
                     the range, particularly in the eastern part of the range. As a result, the main ridge of the
                     Himalayas is not clearly defined, and mountain passes are not as significant for traversing the
                     range as with other mountain ranges.
                 </p>
                 <strong>Glaciers</strong>
-                <p>
+                <p class="lead">
                     The great ranges of central Asia, including the Himalayas, contain the third-largest deposit of ice
                     and snow in the world, after Antarctica and the Arctic. The Himalayan range encompasses about
                     15,000 glaciers, which store about 12,000 km3 (2,900 cu mi) of fresh water. Its glaciers include
@@ -59,7 +59,7 @@
                     glacier (Langtang region) and Zemu (Sikkim).
                 </p>
                 <strong>Lakes</strong>
-                <p>
+                <p class="lead">
                     The Himalayan region is dotted with hundreds of lakes. Most of the larger lakes are on the northern
                     side of the main range. These include the sacred freshwater Lake Manasarovar, near to Mount Kailas
                     with an area of 420 km2 (160 sq mi) and an altitude of 4,590 m (15,060 ft). It drains into the
@@ -71,7 +71,7 @@
                 </p>
                 <br>
                 <h4>Ecology</h4>
-                <p>The flora and fauna of the Himalayas vary with climate, rainfall, altitude, and soils. The climate
+                <p class="lead">The flora and fauna of the Himalayas vary with climate, rainfall, altitude, and soils. The climate
                     ranges from tropical at the base of the mountains to permanent ice and snow at the highest
                     elevations. The amount of yearly rainfall increases from west to east along the southern front of
                     the range. This diversity of altitude, rainfall and soil conditions combined with the very high snow
@@ -80,7 +80,7 @@
                 </p>
                 <br>
                 <h4>Culture</h4>
-                <p>The Himalayan population belongs to four distinct cultural groups, who throughout history have
+                <p class="lead">The Himalayan population belongs to four distinct cultural groups, who throughout history have
                     systematically penetrated the isolated indigenous Himalayan population. Those migrating cultures –
                     Hindu (Indian), Buddhist (Tibetan), Islamic (Afghanistan–Iranian) and Animist (Burmese and southeast
                     Asian) – have created here their own individual and unique place.[5] Their current arrangement,
