--- a/project0/iceland.html
+++ b/project0/iceland.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col-lg-6">
                 <h4>THE NATURAL BEAUTY OF THE NORTH</h4>
-                <p>The north of Iceland truly is a land of contrasts. Its long valleys and peninsulas are interspersed
+                <p class="lead">The north of Iceland truly is a land of contrasts. Its long valleys and peninsulas are interspersed
                     with mountains, lava fields and smooth hills carved out by rivers. The deep and numerous
                     indentations in
                     the coast of the North are at times lush with vegetation, at others barren. As one nears the Arctic
@@ -45,7 +45,7 @@
                 </p>
                 <br>
                 <h4>DISCOVER THE WONDERS OF THE EAST</h4>
-                <p>The east coast of Iceland is home to the country's largest forest, lush farmlands and a range of
+                <p class="lead">The east coast of Iceland is home to the country's largest forest, lush farmlands and a range of
                     small fjords and islands. Thanks to the East's many natural harbors, a variety of fishing villages,
                     and
                     small seaside communities border the coast.
@@ -57,7 +57,7 @@
                 </p>
                 <br>
                 <h4>THE GREAT ESCAPE</h4>
-                <p>For centuries, the interior of Iceland was virtually inaccessible, for years at a time playing host
+                <p class="lead">For centuries, the interior of Iceland was virtually inaccessible, for years at a time playing host
                     only to outlaws in hiding. Via the mountain roads Kjölur and Sprengisandur, the untouched wilderness
                     of
                     Iceland's mountainous centre is now open to the general public—for cautious exploration by foot or
@@ -70,11 +70,11 @@
                 </p>
                 <br>
                 <h4>THE LITTLE CAPITAL WITH THE BIG HEART</h4>
-                <p>With a population of 120,000, Reykjavík is not a whirlwind metropolis. Few skyscrapers grace the
+                <p class="lead">With a population of 120,000, Reykjavík is not a whirlwind metropolis. Few skyscrapers grace the
                     skyline, traffic jams are rare and faces are familiar. But don't be deceived—a steady beat of energy
                     and events keeps the city alive and pulsing with excitement.
                 </p>
-                <p>
+                <p class="lead">
                     Sunny days feel like spontaneous holidays in Reykjavík. Sunbathers and picnickers fill Austurvöllur,
                     the green square in front of Parliament; locals and tourists alike stroll up and down Laugavegur,
                     the main drag, shopping, stopping for coffee, and people watching. The thirsty jockey for sparse
